2004-12-09 Alain Magloire
	Fix for 80620
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java

2004-12-02 Alain Magloire
	Fix for PR 40081.
	For Cygwin use NM to get the global variables.
	* utils/org/eclipse/cdt/utils/DefaultGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/IGnuToolFactory.java
	* utils/org/eclipse/cdt/utils/NM.java
	* utils/org/eclipse/cdt/utils/coff/parser/CygwinPEBinaryObject.java
	* utils/org/eclipse/cdt/utils/coff/parser/PEBinaryObject.java

2004-11-25 Alain Magloire
	Fix PR 79076
	* utils/org/eclipse/cdt/utils/elf/Elf.java

2004-11-16 Alain Magloire
	FIX for 27663
	* utils/org/eclipse/cdt/utils/pty/PTY.java
	* utils/org/eclipse/cdt/utils/spawner/ProcessFactory.java
	* utils/org/eclipse/cdt/utils/spawner/Spawner.java
	* utils/org/eclipse/cdt/utils/spawner/SpawnerInputStream.java

2004-11-14 Alain Magloire
	Fix for PR 77546.
	Make the error parser manager faster by
	using IResourceProxyVisitor to get the files.
	Use eoParser.findFileName() faster.
	* src/org/eclipse/cdt/core/ErrorParserManager.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GASErrorParser.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GCCErrorParser.java
	* src/org/eclipse/cdt/core/internal/errorparsers/GLDErrorarser.java

2004-11-11 Alain Magloire
	PR 78573, patch from Brad Jarvinen
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-11 Alain Magloire
	PR 78570, patch from Brad Jarvinen
	The default VC error parser understands (<line number>) but doesn't understand 
	(<line number>, <column>), which is also a valid VC error output format.
	* src/org/eclipse/cdt/internal/errorparser/VCErroParser.java

2004-11-10 Alain Magloire
	Typo in method IBinaryParser.ISymbol
	* src/org/eclipse/cdt/core/IBinaryParser.java
	* utils/org/eclipse/cdt/utils/Symbol.java

2004-11-10 Alain Magloire
	Fix for PR 78308, on deleting of non-C resources, no deltas
	was fired.

	* model/org/eclipse/cdt/internal/core/model/CModelManager.java
