@@ -16,11 +16,13 @@ import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.cdt.core.IAddress;
+import org.eclipse.cdt.core.IAddressFactory;
 import org.eclipse.cdt.core.IBinaryParser;
 import org.eclipse.cdt.core.IBinaryParser.IBinaryFile;
 import org.eclipse.cdt.core.IBinaryParser.ISymbol;
 import org.eclipse.cdt.utils.Addr2line;
 import org.eclipse.cdt.utils.Addr32;
+import org.eclipse.cdt.utils.Addr32Factory;
 import org.eclipse.cdt.utils.BinaryObjectAdapter;
 import org.eclipse.cdt.utils.CPPFilt;
 import org.eclipse.cdt.utils.IGnuToolFactory;
@@ -41,6 +43,7 @@ public class XCOFFBinaryObject extends BinaryObjectAdapter {
 	ISymbol[] symbols;
 	long starttime;
 	private AR.MemberHeader header;
+	private IAddressFactory addressFactory;
 
 	/**
 	 * @param parser
@@ -306,4 +309,13 @@ public class XCOFFBinaryObject extends BinaryObjectAdapter {
 		return super.getAdapter(adapter);
 	}
 	
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.utils.BinaryObjectAdapter#getAddressFactory()
+	 */
+	public IAddressFactory getAddressFactory() {
+		if (addressFactory == null) {
+			addressFactory = new Addr32Factory();
+		}
+		return addressFactory;
+	}
 }
